updating open api
